--- a/app.json
+++ b/app.json
@@ -1,7 +1,17 @@
 {
   "expo": {
-    "name": "Together",
-    "slug": "together",
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ]
+    ],
+    "name": "Jjapp",
+    "slug": "jjapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
