--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "together",
+  "name": "jjapp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -13,21 +13,24 @@
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "expo": "^52.0.0",
+    "expo": "~52.0.20",
+    "expo-camera": "~16.0.10",
     "expo-font": "~13.0.1",
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
-    "expo-updates": "~0.26.9",
+    "expo-updates": "~0.26.10",
     "lottie-react-native": "7.1.0",
     "react": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
+    "react-native-confirmation-code-field": "^7.4.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "15.8.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
